[package]
name = "json-query"
version = "0.1.0"
edition = "2021"
description = "KAMI plugin — pick, merge, sort, flatten JSON objects"

[lib]
crate-type = ["cdylib"]

[dependencies]
kami-guest = { git = "https://github.com/Hypijump31/KAMI.git", tag = "v0.10.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

wit-bindgen = "0.51"